# mdns-repeater

./: Cargo.toml  README.md  config.yaml
.github/workflows/: release.yml
scripts/: create.sh  destroy.sh  run.sh
src/: main.rs
