[package]
name = "mdns-repeater"
description = "Multicast DNS Repeater"
version = "0.1.0"
authors = ["proelbtn <contact@proelbtn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
env_logger = "0.8.1"
log = "0.4"
nix = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"